// Copyright 2020 The Chromium Authors. All Rights Reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package recipe_modules.build.binary_size;


message InputProperties {
  // Fully qualified GN targets to analyze.
  // Default values depend on OS.
  repeated string analyze_targets = 1;

  // Unqualified targets to compile.
  // Default values depend on OS.
  repeated string compile_targets = 2;

  // Android-specific properties.
  AndroidProperties android = 3;

  // Location of size config JSON, relative to Chromium output dir.
  // TODO(huangs): Add default value apks/MonochromePublic_size_config.json.
  string size_config_json = 4;

  // Name of the GS bucket in which results should be saved.
  string results_bucket = 5;
}

// TODO(huangs): Deprecate and remove this.
message AndroidProperties {
  // Filename of the built apk or .minimal.apks to measure.
  // Defaults to MonochromePublic.minimal.apks.
  string apk_name = 1;

  // List of filenames of proguard mapping files.
  // Defaults to [MonochromePublic.aab.mapping].
  repeated string mapping_names = 2;
}
